# dc-property-impact

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: loudoun.yaml
scripts/: build_prediction_model.py  download_data.sh  run_analysis.py  run_deep_analysis.py  run_zip_analysis.py
src/analysis/: did.py  event_study.py  hedonic.py  spatial.py  synth.py
src/data/: census.py  confounders.py  datacenters.py  geo.py  load_all.py  property.py
src/utils/: config.py  io.py
src/visualization/: maps.py  plots.py
